// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Advisor renders linked 1`] = `
<Link
  to="/authors/12345"
>
  Yoda
</Link>
`;

exports[`Advisor renders unliked 1`] = `
<Link
  to="/authors?q=Yoda"
>
  Yoda
</Link>
`;

exports[`Advisor renders with first_name and last_name 1`] = `
<Link
  to="/authors/12345"
>
  John Yoda
</Link>
`;

exports[`Advisor renders with only first_name 1`] = `
<Link
  to="/authors/12345"
>
  John 
</Link>
`;
